# cmake_app

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  build.sh  main.cpp
